--- a/Section_18_Countdown_Timer/18-indexByInstructor.html
+++ b/Section_18_Countdown_Timer/18-indexByInstructor.html
@@ -1,53 +1,69 @@
 <html>
- 
-<head>
+  <head>
     <title>InstructorVersion-CountdownTimer</title>
-    <style>
-        
-    </style>
-</head>
- 
-<body>
+    <style></style>
+  </head>
+
+  <body>
     <div>
-        <input type="date" name="endDate">
-        <div class="clock">
-            <span><span class="days">0</span> Days</span>
-            <span><span class="hours">0</span> Hours</span>
-            <span><span class="minutes">0</span> Minutes</span>
-            <span><span class="seconds">0</span> Seconds</span>
-        </div>
+      <input type="date" name="endDate" />
+      <div class="clock">
+        <span><span class="days">0</span> Days</span>
+        <span><span class="hours">0</span> Hours</span>
+        <span><span class="minutes">0</span> Minutes</span>
+        <span><span class="seconds">0</span> Seconds</span>
+      </div>
     </div>
     <script>
-        const endDate = document.querySelector("input[name='endDate']");
-        const clock = document.querySelector(".clock");
+      const endDate = document.querySelector("input[name='endDate']");
+      const clock = document.querySelector(".clock");
 
-        endDate.addEventListener("change",function(e){
-            e.preventDefault();
-            //console.log(endDate.value);
-            const temp = new Date(endDate.value);
-            //console.log(temp);
-            //const fiveHoursInMillis = (6 * 60 * 60 * 1000) + (30 * 60 * 1000);
-            //const exactTime = new Date();
-            //exactTime.setTime(temp.getTime() + fiveHoursInMillis)
-            startClock(temp);
-        })
+      endDate.addEventListener("change", function (e) {
+        e.preventDefault();
+        //console.log(endDate.value);
+        const temp = new Date(endDate.value);
+        //console.log(temp);
+        //const fiveHoursInMillis = (6 * 60 * 60 * 1000) + (30 * 60 * 1000);
+        //const exactTime = new Date();
+        //exactTime.setTime(temp.getTime() - fiveHoursInMillis)
+        startClock(temp);
+      });
 
-        function startClock(d){
-            console.log(timeLeft(d));
+      function startClock(d) {
+        let tl = timeLeft(d);
+        console.log(tl.days);
+
+        for(let pro in tl){
+            console.log(pro, tl[pro]);
+            let el = document.querySelector("."+pro);
+            if(el){
+                console.log(el);
+                el.innerHTML = tl[pro];
+            }
         }
+      }
 
-        function timeLeft(d){
-            let currentDate = new Date();
-            //console.log(Date.parse(d));
-            //console.log(currentDate);
-            //console.log(Date.parse(currentDate));
+      function timeLeft(d) {
+        let currentDate = new Date();
+        //console.log(Date.parse(d));
+        //console.log(currentDate);
+        //console.log(Date.parse(currentDate));
 
-            let t = Date.parse(d) - Date.parse(currentDate);
-            //console.log(t);
-            return t;
-        }
+        let t = Date.parse(d) - Date.parse(currentDate);
+        //console.log(t);
 
-
+        let seconds = Math.floor((t / 1000) % 60);
+        let minutes = Math.floor((t / 1000 / 60) % 60);
+        let hours = Math.floor((t / (1000 * 60 * 60)) % 24);
+        let days = Math.floor(t / (1000 * 60 * 60 * 24));
+        return {
+          "total": t,
+          "days": days,
+          "hours": hours,
+          "minutes": minutes,
+          "seconds": seconds,
+        };
+      }
     </script>
-</body>
+  </body>
 </html>
