--- a/Section_19_Patter_Matching_Game/19-indexBySelfV1.html
+++ b/Section_19_Patter_Matching_Game/19-indexBySelfV1.html
@@ -66,6 +66,19 @@
         let colors = ["red","green","blue","yellow"];
         //let arrOfEle = [];
         function startTheGame(){
+
+            var i = 1;                  //  set your counter to 1
+
+            function myLoop() {         //  create a loop function
+                setTimeout(function() {   //  call a 3s setTimeout when the loop is called
+                    console.log('hello');   //  your code here
+                    i++;                    //  increment the counter
+                    if (i < 10) {           //  if the counter < 10, call the loop function
+                    myLoop();             //  ..  again which will trigger another 
+                    }                       //  ..  setTimeout()
+                }, 3000)
+            }
+            myLoop();
             //console.log(allBox.length);
             let choosedIndex =[];
             let counter = 0;
