Pattern Matching Game Completed

--- a/Section_19_Patter_Matching_Game/19-indexBySelfV1.html
+++ b/Section_19_Patter_Matching_Game/19-indexBySelfV1.html
@@ -129,10 +129,24 @@
             clickCounter++;
             if(clickCounter == 4){
                 console.log(userClickedSequence);
-                alert('you win');
-                //location.reload();
+                let finalGameResult = sequenceMadeByComputer.every(function(num, index){
+                    if(num == userClickedSequence[index]){
+                        return true;
+                    }
+                    return false;
+                });
+
+                if(finalGameResult == true){
+                    alert('You win');
+                }else {
+                    alert('You loose');
+                }
+                //alert('you win');
+                location.reload();
             }
         }
+
+        
     </script>
 </body>
 </html>
