--- a/Section_20_Click_Popper_Game/20-indexInstructorVer.html
+++ b/Section_20_Click_Popper_Game/20-indexInstructorVer.html
@@ -5,117 +5,115 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>InstructorVersion - Click Popper Game</title>
+    <style>
+        .btn{
+          cursor: pointer;
+          padding: 15px;
+          border: 1px solid black;
+          text-align: center;
+          background-color: blue;
+          color: white;
+        }
+        .page{
+          display: none;
+        }
+        .visible{
+          display: block;
+        }
+        .pop{
+          border: 1px solid #ddd;
+          width: 100px;
+          height: 100px;
+          display: inline-block;
+          text-align: center;
+          vertical-align: middle;
+          color: #ddd;
+          font-size: 2em;
+          font-family: fantasy;
+        }
+        .row{
+          display: block;
+        }
+        .game{
+          border: 1px solid black;
+        }
+
+    </style>
 </head>
 <body>
         <div class="stats"></div>
         <div class="main page">
             <div class="starter">
                 <a class="btn newGame">New Game</a>
-                <a class="btn newGame2">New Game 2</a>
             </div>
         </div>
         <div class="game page">
         </div>
-    </div>
     <script>
         const playArea = {};
         const player = {};
         let gameObj;
-        /*
-        const data = {
-            "data": [
-              {
-                "icon": "&#8902;",
-                "value": 10
-              },
-              {
-                "icon": "&#10031;",
-                "value": 30
-              },
-              {
-                "icon": "&#10036;",
-                "value": 50
-              },
-              {
-                "icon": "&#10042;",
-                "value": 70
-              },
-              {
-                "icon": "&#10084;",
-                "value": 75
-              },
-              {
-                "icon": "&#9813;",
-                "value": 50
-              },
-              {
-                "icon": "&#9822;",
-                "value": 60
-              },
-              {
-                "icon": "&#9924;",
-                "value": 40
-              },
-              {
-                "icon": "&#9971;",
-                "value": 100
-              },
-              {
-                "icon": "&#9729;",
-                "value": -50
-              },
-              {
-                "icon": "&#9785;",
-                "value": -100
-              },
-              {
-                "icon": "&#9760;",
-                "value": -250
-              },
-              {
-                "icon": "&#9791;",
-                "value": -20
-              }
-            ]
-        }
-        */
+
+
         playArea.stats = document.querySelector(".stats");
         playArea.main = document.querySelector(".main");
-        playArea.game = document.querySelector(".main");
+        playArea.game = document.querySelector(".game");
+        console.log(playArea);
         playArea.btns = Array.from(document.querySelectorAll(".btn"));
         playArea.page = Array.from(document.querySelectorAll(".page"));
-        console.log(playArea);
         document.addEventListener("DOMContentLoaded",getData);
 
 
-        player.score = 0;
-        player.items = 3;
-
         playArea.btns.forEach(function(item){
-            console.log(item);
             item.addEventListener('click',handleBtn);
         });
 
         function getData(){
+            playArea.main.classList.add("visible");
             console.log("DOM loaded");
             fetch("http://discoveryvip.com/shared/json.php?f=game").then(function(rep){
               return rep.json();
             }).then(function(data){
-              console.log(data);
               gameObj = data.data;
+              buildBoard();
               console.log(gameObj);
             })
         }
 
+        function buildBoard(){
+          debugger;
+          let rows = 4;
+          let cols = 4;
+          let cnt = 0;
+          playArea.game.style.width = cols * 100 + (cols * 2) + 'px';
+          playArea.game.style.margin = "auto";
+          for(let y=0;y<rows;y++){
+            let divMain = document.createElement("div");
+            divMain.setAttribute("class","row");
+            divMain.style.width = cols * 100 + (cols * 2) + 'px';
+            for(let x=0;x<cols;x++){
+              let div = document.createElement("div");
+              div.setAttribute("class","pop");
+              cnt++;
+              div.innerText = cnt;
+              div.cnt = cnt;
+              divMain.appendChild(div);
+            }
+            playArea.game.appendChild(divMain);
+          }
+        }
         function handleBtn(e){
-            console.log(e.target);
             if(e.target.classList.contains("newGame")){
                 console.log("Yes");
                 startGame();                
             }
         }
 
-        function startGame(){
+        function startGame(){    
+            player.score = 0;
+            player.items = 3;
+            playArea.main.classList.remove("visible");
+            playArea.game.classList.add("visible");
             console.log("start");
         }
     </script>
